--- a/django-models/LibraryProject/relationship_app/templates/relationship_app/list_books.html
+++ b/django-models/LibraryProject/relationship_app/templates/relationship_app/list_books.html
@@ -12,5 +12,20 @@
         <li>{{ book.title }} by {{ book.author.name }}</li>
         {% endfor %}
     </ul>
+    <hr>
+    <!-- We only show this form if the user is actually logged in -->
+    {% if user.is_authenticated %}
+      <p>Hello, {{ user.username }}!</p>
+
+      <!-- This form will send a POST request to the 'logout' URL -->
+      <form action="{% url 'logout' %}" method="post">
+        {% csrf_token %}
+        <button type="submit">Logout</button>
+      </form>
+    {% else %}
+      <p>You are not logged in.</p>
+      <a href="{% url 'login' %}">Login</a>
+    {% endif %}
 </body>
+
 </html>
