--- a/django_blog/blog/templates/blog/base.html
+++ b/django_blog/blog/templates/blog/base.html
@@ -1,17 +1,19 @@
+{% load static %}  <!-- FIX 1: Added this line -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}Django Blog{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+    <!-- FIX 2 & 3: Updated path and filename -->
+    <link rel="stylesheet" href="{% static 'blog/style.css' %}">
 </head>
 <body>
     <header>
         <nav>
             <ul>
+                <!-- Note: These URLs will fail until we configure urls.py later -->
                 <li><a href="{% url 'home' %}">Home</a></li>
-                <li><a href="{% url 'posts' %}">Blog Posts</a></li>
                 <li><a href="{% url 'login' %}">Login</a></li>
                 <li><a href="{% url 'register' %}">Register</a></li>
             </ul>
@@ -20,7 +22,6 @@
 
     <div class="content">
         {% block content %}
-        <!-- Page-specific content goes here -->
         {% endblock %}
     </div>
 
@@ -28,6 +29,7 @@
         <p>&copy; 2024 Django Blog</p>
     </footer>
 
-    <script src="{% static 'js/scripts.js' %}"></script>
+    <!-- FIX 2 & 3: Updated path and filename -->
+    <script src="{% static 'blog/script.js' %}"></script>
 </body>
 </html>
