--- a/django_blog/blog/static/css/style.css
+++ b/django_blog/blog/static/css/style.css
@@ -43,3 +43,12 @@ footer {
     background-color: #333;
     color: white;
 }
+
+.profile-pic  {
+    height: 125px;
+    width: 125px;
+    margin-right: 20px;
+    margin-bottom: 16px;
+    border-radius: 50%;
+    object-fit: cover;
+}
